--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
