--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "joi": "^17.4.2",
+    "joi-postalcode": "^2.0.0",
     "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6"
   },
