--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "nuka-carousel": "^4.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
