--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "express-rate-limit": "^5.3.0",
     "joi": "^17.4.2",
     "joi-postalcode": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
