--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "jwt-decode": "^3.1.2",
     "nuka-carousel": "^4.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
