--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
+    "stripe": "^8.176.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
