--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^30.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "axios": "^0.21.4",
     "jwt-decode": "^3.1.2",
     "nuka-carousel": "^4.8.0",
