--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@ckeditor/ckeditor5-build-classic": "^30.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
     "jwt-decode": "^3.1.2",
     "nuka-carousel": "^4.8.0",
     "prop-types": "^15.7.2",
