--- a/api/package.json
+++ b/api/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "formidable": "^1.2.2",
     "joi": "^17.4.2",
     "joi-postalcode": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.6.5",
     "pg": "^8.7.1",
