--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^30.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.19.1",
     "axios": "^0.21.4",
     "date-fns": "^2.24.0",
     "fs": "^0.0.1-security",
