--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "nuka-carousel": "^4.8.0",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
